# url-shortener-rust

./: .gitignore  Cargo.toml  package-lock.json  package.json  serverless.yaml
src/: links.rs  main.rs
src/static_content/: error.html  index.html  mod.rs  not_found.html
